--- a/bibtex/jia2024d3.html
+++ b/bibtex/jia2024d3.html
@@ -1,4 +1,4 @@
-@inproceedings{jia2024d3,
+<html><body><pre style="word-wrap: break-word; white-space: pre-wrap;">@inproceedings{jia2024d3,
   title={D3: A Methodological Exploration of Domain Division, Modeling, and Balance in Multi-Domain Recommendations},
   author={Jia, Pengyue and Wang, Yichao and Lin, Shanru and Li, Xiaopeng and Zhao, Xiangyu and Guo, Huifeng and Tang, Ruiming},
   booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
@@ -7,3 +7,4 @@
   pages={8553--8561},
   year={2024}
 }
+</pre></body></html>
