--- a/bibtex/fan2023recommender.html
+++ b/bibtex/fan2023recommender.html
@@ -1,7 +1,8 @@
-<html><body><pre style="word-wrap: break-word; white-space: pre-wrap;">@article{fan2023recommender,
+<html><body><pre style="word-wrap: break-word; white-space: pre-wrap;">@article{zhao2024recommender,
   title={Recommender systems in the era of large language models (llms)},
-  author={Fan, Wenqi and Zhao, Zihuai and Li, Jiatong and Liu, Yunqing and Mei, Xiaowei and Wang, Yiqi and Tang, Jiliang and Li, Qing},
-  journal={arXiv preprint arXiv:2307.02046},
-  year={2023}
+  author={Zhao, Zihuai and Fan, Wenqi and Li, Jiatong and Liu, Yunqing and Mei, Xiaowei and Wang, Yiqi and Wen, Zhen and Wang, Fei and Zhao, Xiangyu and Tang, Jiliang and others},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  year={2024},
+  publisher={IEEE}
 }
 </pre></body></html>
