--- a/bibtex/liu2023moelora.html
+++ b/bibtex/liu2023moelora.html
@@ -1,7 +1,8 @@
-<html><body><pre style="word-wrap: break-word; white-space: pre-wrap;">@article{liu2023moelora,
-  title={Moelora: An moe-based parameter efficient fine-tuning method for multi-task medical applications},
+<html><body><pre style="word-wrap: break-word; white-space: pre-wrap;">@inproceedings{liu2024moe,
+  title={When MOE Meets LLMs: Parameter Efficient Fine-tuning for Multi-task Medical Applications},
   author={Liu, Qidong and Wu, Xian and Zhao, Xiangyu and Zhu, Yuanshao and Xu, Derong and Tian, Feng and Zheng, Yefeng},
-  journal={arXiv preprint arXiv:2310.18339},
-  year={2023}
+  booktitle={Proceedings of the 47th International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  pages={1104--1114},
+  year={2024}
 }
 </pre></body></html>
