--- a/bibtex/lin2024graph.html
+++ b/bibtex/lin2024graph.html
@@ -1,9 +1,7 @@
-<html><body><pre style="word-wrap: break-word; white-space: pre-wrap;">@inproceedings{
-  lin2024graph,
+<html><body><pre style="word-wrap: break-word; white-space: pre-wrap;">@inproceedings{lin2024graph,
   title={Graph Neural Stochastic Diffusion for Estimating Uncertainty in Node Classification},
-  author={Xixun Lin and Wenxiao Zhang and Fengzhao Shi and Chuan Zhou and Lixin Zou and Xiangyu Zhao and Dawei Yin and Shirui Pan and Yanan Cao},
+  author={Lin, Xixun and Zhang, Wenxiao and Shi, Fengzhao and Zhou, Chuan and Zou, Lixin and Zhao, Xiangyu and Yin, Dawei and Pan, Shirui and Cao, Yanan},
   booktitle={Forty-first International Conference on Machine Learning},
-  year={2024},
-  url={https://openreview.net/forum?id=xJUhgvM2u8}
+  year={2024}
 }
 </pre></body></html>
